# deshortify-gui

./: CMakeLists.txt  README.md  main.cpp
